--- a/CPOA TD2/src/projet/FXML/pagecategorie.fxml
+++ b/CPOA TD2/src/projet/FXML/pagecategorie.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
@@ -11,7 +16,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="986.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projet.controleur.PageCategorieController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="986.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projet.controleur.PageCategorieController">
    <children>
       <HBox layoutX="-5.0" layoutY="-5.0" prefHeight="649.0" prefWidth="991.0">
          <children>
@@ -63,7 +68,7 @@
             <VBox prefHeight="649.0" prefWidth="841.0">
                <children>
                   <FlowPane prefHeight="87.0" prefWidth="841.0" />
-                  <TableView fx:id="tableViewCategorie" prefHeight="559.0" prefWidth="841.0">
+                  <TableView fx:id="tableViewCategorie" onMouseClicked="#clickOnTable" prefHeight="559.0" prefWidth="841.0">
                     <columns>
                       <TableColumn fx:id="tableColumnTitre" prefWidth="407.0" text="Titre" />
                       <TableColumn fx:id="tableColumnVisuel" minWidth="0.0" prefWidth="431.0" text="Visuel" />
